Fix banner styles: Align banner content with page content

--- a/frontend/src/components/Banner.css
+++ b/frontend/src/components/Banner.css
@@ -2,17 +2,19 @@
   width: 100%;
   color: #fff;
   background-color: #222;
+}
+
+.banner-content {
   padding: 15px;
 }
 
-@media (min-width: 1500px) {
-  .banner {
-    padding: 15px 10%;
+@media (min-width: 900px) {
+  .banner-content {
+    padding: 15px 20%;
   }
 }
 
 .banner a {
   color: #e8e8e8;
   font-weight: bold;
-
 }
